--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -13,11 +13,11 @@ license: CC0-1.0
 
 ### Simple Summary
 
-This ECIP defines the Ethereum Classic Funding Proposal (ECFP) process: a standardized, permissionless mechanism for submitting and executing funding requests from the Olympia Treasury, governed by the Olympia DAO. The ECFP format provides a reproducible structure for transparent and accountable allocation of protocol-level funds. It enables developers, infrastructure operators, researchers, and ecosystem contributors to submit auditable proposals for on-chain funding. By formalizing a reproducible structure for submission, voting, and disbursement, this process ensures treasury allocations are accountable, equitable, and aligned with Ethereum Classic’s principles of decentralization and sustainability.
+This ECIP defines the Ethereum Classic Funding Proposal (ECFP) process: a standardized, permissionless mechanism for submitting and executing funding requests from the Olympia Treasury (ECIP-1112), governed by the Olympia DAO (ECIP-1113). The ECFP format provides a reproducible structure for transparent and accountable allocation of protocol-level funds. It enables developers, infrastructure operators, researchers, and ecosystem contributors to submit auditable proposals for on-chain funding. By formalizing a reproducible structure for submission, voting, and disbursement, this process ensures treasury allocations are accountable, equitable, and aligned with Ethereum Classic’s principles of decentralization and sustainability.
 
 ### Abstract
 
-This ECIP formalizes the Ethereum Classic Funding Proposal (ECFP) process as the standard submission, voting, and execution mechanism for allocating funds from the Olympia Treasury. The ECFP mechanism provides a transparent, reproducible pathway for protocol-level funding, enabling contributors to propose work that aligns with the network’s values and strategic priorities.
+This ECIP formalizes the Ethereum Classic Funding Proposal (ECFP) process as the standard submission, voting, and execution mechanism for allocating funds from the Olympia Treasury (ECIP-1112), governed by the Olympia DAO (ECIP-1113). The ECFP mechanism provides a transparent, reproducible pathway for protocol-level funding, enabling contributors to propose work that aligns with the network’s values and strategic priorities.
 
 Each ECFP includes a clearly scoped problem statement, deliverables, funding amount, recipient(s), disbursement schedule, and success criteria. Proposals undergo community discussion, on-chain voting, and time-locked execution upon approval.
 
@@ -25,19 +25,23 @@ By standardizing submission and governance workflows, the ECFP format ensures fa
 
 ### Motivation
 
-Historically, Ethereum Classic has lacked a structured, transparent process for funding public goods such as client maintenance, infrastructure, documentation, security audits, and educational resources. Funding decisions were often made off-chain by centralized entities, leading to inconsistent support, limited accountability, and community mistrust.
+Historically, Ethereum Classic has depended on centralized foundations and private donors to fund protocol development, often through opaque processes with limited community oversight. This model introduced risks of gatekeeping, funding inconsistency, and strategic misalignment. Critical public goods — such as client maintenance, infrastructure, documentation, security audits, and educational resources — were funded in an ad hoc manner, leading to inconsistent support, limited accountability, and community mistrust.
 
-With the activation of the Olympia Treasury (ECIP-1112) and the governance system established by the Olympia DAO (ECIP-1113), Ethereum Classic now has a decentralized, protocol-native funding source. To ensure its effectiveness, a standardized, auditable framework is required for submitting, evaluating, and executing funding proposals.
+With the activation of the Olympia Treasury (ECIP-1112) and the governance system established by the Olympia DAO (ECIP-1113), Ethereum Classic now has a decentralized, protocol-native funding source. To ensure these funds are allocated transparently and without reliance on trusted intermediaries, a standardized, auditable framework is required for submitting, evaluating, and executing funding proposals.
 
 The Ethereum Classic Funding Proposal (ECFP) process addresses this need by:
 
 - **Defining a transparent proposal lifecycle** — from submission to voting to execution.
 - **Supporting open participation** — any contributor MAY submit proposals, regardless of affiliation.
-- **Improving accountability** — all proposal data and voting outcomes are recorded on-chain.
+- **Improving accountability** — all proposal data and voting outcomes are recorded on-chain and auditable.
 - **Streamlining governance** — standardized formats reduce review complexity and decision fatigue.
 - **Preserving institutional knowledge** — all proposals, regardless of outcome, remain publicly archived on-chain and in content-addressed storage for long-term accessibility.
 
-Modeled after the ECIP process, the ECFP framework brings transparent, rules-based treasury funding to Ethereum Classic for the first time in its history.
+Modeled after the ECIP process, the ECFP framework replaces opaque, discretionary funding with transparent, rules-based treasury governance — bringing accountable, permissionless public goods funding to Ethereum Classic for the first time in its history.
+
+### Specification
+
+The Ethereum Classic Funding Proposal (ECFP) process defines a standardized, on-chain lifecycle for submitting, reviewing, voting on, and executing protocol-level funding proposals. The process is enforced through Olympia DAO governance (ECIP-1113) and is transparent, reproducible, and recorded immutably on-chain.
 
 ### Specification
 
@@ -48,6 +52,7 @@ The Ethereum Classic Funding Proposal (ECFP) process defines a standardized, on-
 1. **Proposal Submission**
 
    - Any Ethereum Classic address MAY submit an ECFP via the Olympia DAO interface.
+   - Proposal submission is permissionless. Optional Sybil-resistance modules (e.g., BrightID, Gitcoin Passport, Proof of Humanity) MAY be adopted by DAO vote to verify unique participants.
    - Each proposal MUST include:
      - Title and ECFP number (assigned sequentially)
      - Author(s) and contact information
@@ -84,6 +89,7 @@ The Ethereum Classic Funding Proposal (ECFP) process defines a standardized, on-
 
    - Upon approval, the DAO contract SHALL trigger the Treasury’s `release()` or `execute()` method.
    - Disbursements MAY be immediate, time-locked, or milestone-based.
+   - Treasury disbursements SHALL use deterministic proposal hashes for release validation, binding off-chain metadata (e.g., IPFS or Arweave CID) to an immutable execution payload.
    - Execution MUST emit a `ProposalExecuted` event with relevant metadata (e.g., ECFP ID, recipient, amount, timestamp).
 
    The following call pattern MUST be used to enforce DAO-only execution and maintain proposal-auditing integrity:
@@ -102,72 +108,84 @@ The Ethereum Classic Funding Proposal (ECFP) process defines a standardized, on-
    }
    ```
 
-
 5. **Amendments and Withdrawals**
 
    - Proposals MAY be modified or withdrawn while in `Draft` status.
-   - Once in `Active`, proposals are immutable and subject only to voting outcome.
+   - Once in `Active`, proposals are immutable; any substantive change requires submitting a new proposal.
 
 6. **Transparency and Indexing**
 
-   - All proposal data and status changes MUST be recorded on-chain.
+   - All proposal data, state changes, and execution events MUST be recorded on-chain.
+   - The DAO and Treasury contracts SHOULD emit standardized events (`ProposalSubmitted`, `ProposalExecuted`, etc.) for indexing and public transparency.
    - A public explorer MAY track proposal history, funding flow, and results.
 
-#### Spam and Governance Capture Mitigations
+#### Spam, Sybil, and Governance Capture Mitigations
 
-To maintain resilience and openness, the following mitigations MAY be enforced by Olympia DAO:
+To maintain resilience, openness, and resistance to manipulation, the following mitigations MAY be enforced by Olympia DAO:
 
 - **Participation Thresholds**  
   Submission MAY require:
-  - Token staking or deposit (refundable if quorum met)
+  - Token staking or refundable deposit (e.g., returned if quorum met)
   - Minimal ETC or governance token holding
+  - Optional integration with Sybil-resistance systems such as BrightID, Gitcoin Passport, or Proof of Humanity. These integrations are permissionless, modular, and opt-in — enabling proposal authors or sub-DAOs to define eligibility rules based on external identity attestations.
 
 - **Submission Cooldowns**  
   - Rate limits MAY be applied to deter flooding or proposal spamming.
 
 - **Draft Review Periods**  
-  - Proposals MUST reside in `Draft` state before activation to allow community feedback.
+  - Proposals MUST remain in `Draft` status for a minimum review period before activation, to allow for community feedback and informal discussion.
 
 - **Structured Format Requirements**  
   - All ECFPs MUST conform to a standardized template and embed a verifiable content hash (e.g., IPFS CID, Arweave digest) to ensure metadata immutability and auditability.
 
-- **Voting Model Upgradeability**  
-  - The DAO MAY upgrade the voting system through governance, including adopting non-token-based models such as quadratic voting, identity-verified voting, or soulbound token schemes. These upgrades MUST follow the standard ECFP governance path.
+#### Voting Model Upgradeability
+
+- At launch, Olympia DAO uses a tokenless, one-address-one-vote model as defined in [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113).
+- The DAO MAY, through on-chain governance, upgrade to other voting systems — including token-based (e.g., stake-weighted or delegated stake), quadratic, identity-verified, soulbound token, or hybrid models.
+- Any such change MUST be proposed and approved via the standard ECFP governance process and adhere to quorum, threshold, and timelock requirements.
 
 #### Child-DAO ECFPs for Infrastructure Spending
 
-To streamline recurring, non-optional funding (e.g., client maintenance, RPC services), the DAO MAY define **Child-DAO ECFP categories** with specialized workflows and delegated budgets.
+To streamline recurring, non-optional funding (e.g., client maintenance, RPC services), the DAO MAY define **Child-DAO ECFP categories** with specialized workflows and delegated budgets, consistent with the governance framework in [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113).
 
 These subtypes support predictable and auditable funding streams for infrastructure-critical domains, such as:
 
-- **Client DAO** – Maintains protocol clients like Core-Geth
-- **Infra DAO** – Funds RPC nodes, explorers, monitoring, and deployment tooling
-- **Security DAO** – Handles audits, CVEs, bounty programs, and formal verification
+- **Client DAO** – Maintains protocol clients (e.g., Core-Geth), reviews CVEs, performs upgrades, and ensures consensus compatibility.
+- **Infra DAO** – Manages public RPC endpoints, explorer tools, indexers, and DevOps support.
+- **Security DAO** – Funds independent audits, formal verification, fuzzing, and bounty programs.
 
 Each Child-DAO:
-- Submits ECFPs on a scheduled or recurring basis
-- Operates under scoped authority granted by main DAO votes
-- Publishes periodic progress and expenditure reports
-- May be sunset or reauthorized through ECFP proposals
+- Is deployed as a modular contract under the authority of the main DAO.
+- Submits ECFPs on a scheduled or recurring basis.
+- Operates under scoped authority granted by main DAO votes.
+- Publishes periodic progress and expenditure reports tied to specific deliverables.
+- May be sunset, reauthorized, or have its budget adjusted through ECFP proposals.
 
 This structure ensures:
-- **Timely, depoliticized support** for critical services
-- **Public accountability** through transparent disbursement and reporting
-- **Reduced governance overhead** for non-controversial infrastructure tasks
+- **Timely, depoliticized support** for critical services.
+- **Public accountability** through transparent disbursement, standardized event logging, and reporting.
+- **Reduced governance overhead** for non-controversial infrastructure tasks.
 
-Child-DAO ECFPs MUST still follow the standard ECFP lifecycle (submission → voting → timelocked execution) and remain subject to community oversight and DAO quorum rules.
+**Governance Requirements**:  
+- All disbursements from the Olympia Treasury MUST still pass through main DAO governance via structured ECFPs or scheduled approvals.
+- All interactions between the Treasury and Child-DAOs MUST emit standardized events and maintain full on-chain auditability.
+- Child-DAO ECFPs MUST follow the standard ECFP lifecycle (submission → voting → timelocked execution) and remain subject to quorum, threshold, and community oversight rules.
 
 #### Governance Scope
 
-- The ECFP process is the exclusive mechanism for all Olympia Treasury disbursements, including:
+- The ECFP process is the **exclusive, on-chain mechanism** for all Olympia Treasury disbursements, including:
   - Core protocol development
   - Emergency funding
   - Recurring or operational budgets
   - Multi-phase or milestone-based grants
 
+- The Olympia DAO contract, as defined in [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113), SHALL be the sole authorized caller of the `release()` and `execute()` functions on the Olympia Treasury (ECIP-1112).
+- All fund movements from the Treasury MUST be governed exclusively by successful DAO proposals following the ECFP process and enforced in the treasury contract logic.
+- Treasury access is immutable, governance-isolated, and cannot be overridden by any off-chain or discretionary process.
+
 - The DAO MAY define proposal subtypes (e.g., Operational ECFPs, Treasury Management ECFPs) with custom eligibility and workflows.
 
-- No treasury funds MAY be allocated outside the ECFP process.
+- No treasury funds MAY be allocated or disbursed outside the ECFP process.
 
 Additional safeguards MAY include:
 - Supermajority thresholds for sensitive funding categories  
@@ -178,7 +196,11 @@ Additional safeguards MAY include:
 
 To facilitate fiat disbursements and administrative compliance, an external legal interface is provided through the Ethereum Classic DAO LLC — a Wyoming-registered entity operating under the Wyoming DAO LLC Act.
 
-- The Ethereum Classic DAO LLC SHALL operate as a non-discretionary executor of approved proposals. It SHALL perform no evaluative, filtering, or discretionary role, and SHALL be fully subordinate to the on-chain governance outcome.
+- The Ethereum Classic DAO LLC SHALL operate solely as a legal execution proxy for approved on-chain proposals. It SHALL perform no evaluative, filtering, or discretionary role, and SHALL be fully subordinate to the on-chain governance outcome.
+- The LLC SHALL perform only off-chain administrative tasks explicitly authorized by approved DAO proposals, such as:
+  - Fiat currency conversion
+  - Contractor onboarding and KYC
+  - Tax reporting and legal compliance
 - It SHALL publish periodic public reports, including:
   - Donation receipts  
   - Contractor onboarding logs  
@@ -188,31 +210,39 @@ To facilitate fiat disbursements and administrative compliance, an external lega
 - The LLC MUST NOT:
   - Hold treasury private keys  
   - Modify or veto approved proposals  
-  - Combine protocol and donor funds
+  - Combine protocol and donor funds  
+  - Exercise any control over treasury funds or DAO decisions
 
-DAO tokenholders MAY reassign LLC roles or rotate signers via term-limited elections defined by DAO vote.
+- DAO participants (as defined by the active governance model) MAY reassign LLC roles or rotate signers via term-limited elections defined by DAO vote.
+- The LLC’s scope and actions SHALL be publicly verifiable, auditable, and bound by a limited administrative mandate.
 
 #### Donation Handling and Segregation
 
-- Off-chain donations MAY be accepted but MUST be:
+The Ethereum Classic DAO LLC MAY receive off-chain donations in fiat or crypto. All such donations:
+
+- MUST be:
   - Tracked separately from treasury funds  
+  - Routed through on-chain mechanisms when feasible  
   - Disbursed only via DAO-approved proposals  
-  - Included in public reports
+  - Included in public financial transparency reports
 
 - Use of donor funds outside the ECFP process MUST be:
   - Optional  
   - Transparent  
-  - Subject to community oversight
+  - Subject to community oversight  
+  - Strictly separated from protocol-level treasury disbursements
+
+- Donor funds MUST NOT override or bypass DAO-approved allocations, and off-chain spending MAY NOT compromise governance integrity. All donation handling SHALL be publicly verifiable and governed by a limited administrative mandate.
 
 **Informative Note**: As a best practice, the DAO MAY define a "Donation ECFP" format, enabling donors to align earmarked contributions with specific proposals. All such disbursements MUST pass through the standard governance process.
 
 #### Strategic Donors and Institutional Funders
 
-The ECFP framework also enables transparent and accountable participation by centralized or institutional donors, such as:
+In addition to individual contributors, the ECFP framework — working in coordination with the Ethereum Classic DAO LLC — enables transparent and accountable participation by centralized or institutional donors, such as:
 
-- Centralized exchanges (CEXs)  
+- Centralized exchanges  
 - Mining pools and ASIC manufacturers  
-- Investment trusts and ETF managers (e.g., Grayscale, VanEck)  
+- Investment trusts and ETF managers  
 - Infrastructure sponsors (e.g., RPC, explorer, hosting providers)  
 - Web3 venture firms and protocol builders
 
@@ -228,7 +258,7 @@ Key features that make Olympia suitable for institutional participation:
 
 #### Protocol-Level Donors and Fee Forwarding (Composable DeFi Stack)
 
-In addition to off-chain donations, Olympia also enables EVM-native **protocol-level donations** from composable DeFi applications and foundational infrastructure deployed on Ethereum Classic. Protocols such as DEXs, lending markets, liquid staking, stablecoins, and token wrappers MAY opt to **hardcode a small percentage of transaction fees, yield, or protocol revenue** to be forwarded to the Olympia Treasury address.
+Building on the Strategic Donors framework, Olympia also enables EVM-native **protocol-level donations** from composable DeFi applications and foundational infrastructure deployed on Ethereum Classic. Protocols such as DEXs, lending markets, liquid staking, stablecoins, and token wrappers MAY opt to **hardcode a small percentage of transaction fees, yield, or protocol revenue** to be forwarded to the Olympia Treasury address.
 
 This creates a **sustainable feedback loop**:
 
@@ -258,11 +288,13 @@ The Ethereum Classic Funding Proposal (ECFP) framework provides a minimal but ro
 - The system imposes no minimum activity requirements — it remains valid even if only one ECFP is approved annually.
 - The format scales naturally with network growth and does not require frequent modification.
 
-By codifying a simple but extensible framework, ETC avoids the need for discretionary funding from private foundations or ad hoc grants.
+By codifying a simple but extensible framework, ETC avoids the need for discretionary funding from private foundations or ad hoc grants, replacing these opaque processes with transparent, rules-based treasury governance.
+
+The ECFP process is designed to integrate directly with the Olympia Treasury (ECIP-1112) and Olympia DAO (ECIP-1113), ensuring that all disbursements are enforced on-chain by immutable smart contracts. This modular structure allows parameters, templates, and workflows to be upgraded via DAO governance while preserving the core principles of decentralization, neutrality, and sustainability.
 
 #### Governance-Aligned Funding Infrastructure
 
-The ECFP process formalizes a community-controlled mechanism for allocating protocol-level funds from the Olympia Treasury (ECIP-1112) under the governance of Olympia DAO (ECIP-1113). It ensures that public goods funding is:
+The ECFP process formalizes a community-controlled mechanism for allocating protocol-level funds from the Olympia Treasury (ECIP-1112) under the governance of Olympia DAO (ECIP-1113). It replaces opaque, discretionary funding decisions with transparent, on-chain governance, ensuring that public goods funding is:
 
 - **Transparent** — All proposals, votes, and disbursements are recorded immutably on-chain.
 - **Inclusive** — Any contributor MAY submit a proposal without requiring prior affiliation or political capital.
@@ -275,33 +307,33 @@ The ECFP process formalizes a community-controlled mechanism for allocating prot
   Structured templates, defined execution paths, and required deliverables ensure proposal intent and outcomes are clearly documented and enforceable.
 
 - **Transparency and Auditability**  
-  All actions — from proposal submission to treasury execution — are verifiable on-chain and available for public inspection.
+  All proposal metadata, voting records, and disbursement events MUST be recorded on-chain and available for public inspection.
 
 - **Openness and Meritocracy**  
-  Anyone MAY participate. Access is not gated by token holdings, off-chain influence, or pre-approval.
+  Anyone MAY participate in submitting proposals and voting. Access is not gated by token holdings, off-chain influence, or pre-approval.
 
 - **Governance Modularity**  
-  The ECFP format is defined independently of DAO implementation. Changes to governance architecture do not affect the funding process itself.
+  The ECFP format is defined independently of DAO implementation. Changes to governance architecture or voting logic do not affect the funding process itself, and future upgrades can be adopted without altering the ECFP structure.
 
 - **Alignment with ETC Principles**  
   The process reflects Ethereum Classic’s core tenets: immutability, decentralization, and resistance to centralized capture. It replaces opaque, foundation-driven funding with a permissionless, rule-based mechanism.
 
 #### Ecosystem Context
 
-The ECFP process places Ethereum Classic on par with DAO-based funding systems used by other leading chains:
+The ECFP process places Ethereum Classic on par with DAO-based funding systems used by other leading chains, demonstrating the viability and scalability of transparent, on-chain treasury governance:
 
 - **Arbitrum (AIP Framework)** — On-chain proposals for treasury disbursement to ecosystem contributors.
 - **Optimism (RPGF)** — Retroactive funding for high-impact public goods.
 - **Celo Community Fund** — DAO-managed grants with milestone oversight.
+- **Ronin DAO** — Treasury-funded infrastructure and ecosystem support.
+- **Mantle Governance** — Modular treasury management with delegated authority.
 
 This ECIP ensures Ethereum Classic adopts a modern, decentralized approach to development funding — one that is principled, reproducible, and built to endure.
 
-### Implementation
-
-The Ethereum Classic Funding Proposal (ECFP) process SHALL be implemented as an integral component of the Olympia DAO governance framework (see ECIP-1113), which interfaces directly with the Olympia Treasury contract (ECIP-1112). The process combines on-chain governance mechanisms with standardized proposal formats and off-chain deliberation infrastructure.
-
 #### 1. Proposal Submission
 
+- Proposal submission is permissionless. Any Ethereum Classic address MAY submit an ECFP via the Olympia DAO interface, subject to the governance parameters defined in [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113) (e.g., quorum, thresholds, delays).
+- Optional Sybil-resistance modules (e.g., BrightID, Gitcoin Passport, Proof of Humanity) MAY be adopted via DAO vote to verify unique participants.
 - A dedicated submission portal SHALL be provided at: `https://github.com/ethereumclassic/ECFPs`.
 - Each ECFP MUST include:
   - Sequential ECFP number
@@ -319,7 +351,7 @@ The Ethereum Classic Funding Proposal (ECFP) process SHALL be implemented as an 
 - Proposals SHOULD follow the [official ECFP Markdown template](https://github.com/ethereumclassic/ECFPs/blob/main/ecfp-template.md).
 - Proposals MAY include links to GitHub repositories, mockups, prototypes, or community endorsements.
 
-Proposal metadata MUST be hashed and linked to content-addressed storage (e.g., IPFS or Arweave) using the following structure:
+Proposal metadata MUST be hashed and linked to content-addressed storage (e.g., IPFS or Arweave) using the following structure, ensuring that off-chain proposal content is immutably bound to the on-chain execution payload for auditability:
 
 ```solidity
 // --- BEGIN PROPOSAL SUBMISSION FUNCTION ---
@@ -333,6 +365,7 @@ Proposal metadata MUST be hashed and linked to content-addressed storage (e.g., 
 //
 // Proposals should be discussed off-chain and finalized before submission.
 // This contract does not validate deliverables or enforce proposal quality.
+
 function submitECFP(
     uint256 ecfpId,
     address recipient,
@@ -353,7 +386,6 @@ function submitECFP(
 
     emit ProposalSubmitted(ecfpId, recipient, amount, metadataCID, hash);
 }
-// --- END PROPOSAL SUBMISSION FUNCTION ---
 ```
 
 #### 2. On-Chain Registry and Governance
@@ -366,7 +398,7 @@ function submitECFP(
 
 - Governance contracts MUST:
   - Enforce voting delays, voting periods, and quorum thresholds
-  - Capture voter snapshot state at the proposal block height
+  - Capture voter snapshot state at the proposal’s voting snapshot block height to prevent vote power changes after proposal activation
 
 #### 3. Execution and Disbursement
 
@@ -376,6 +408,7 @@ function submitECFP(
   - Scheduled vesting based on milestones
   - Programmatic stream via escrow or disbursal contract
 
+- Treasury disbursements SHALL use deterministic proposal hashes for release validation, binding off-chain metadata (e.g., IPFS or Arweave CID) to an immutable execution payload.
 - Execution MUST emit a `ProposalExecuted` event, containing:
   - ECFP ID
   - Recipient address
@@ -412,7 +445,6 @@ function executeECFP(
 
 All disbursements MUST emit a standardized `ProposalExecuted` event for transparency, analytics, and auditability.
 
-
 #### 4. Transparency Dashboard
 
 - A public-facing dashboard SHALL track:
@@ -420,7 +452,7 @@ All disbursements MUST emit a standardized `ProposalExecuted` event for transpar
   - DAO voting outcomes and participation metrics
   - Treasury balance and disbursement history
 
-- The dashboard MUST be open-source and verifiably mirror on-chain state.
+- The dashboard MUST be open-source and verifiably mirror on-chain state, leveraging standardized on-chain events for proposal lifecycle and execution tracking.
 
 #### 5. Community Review and Deliberation
 
@@ -453,7 +485,7 @@ The Ethereum Classic Funding Proposal (ECFP) process is implemented entirely at 
   Legacy smart contracts and decentralized applications (dApps) will continue to function without modification. The ECFP system operates independently of unrelated contracts.
 
 - **Client Compatibility**:  
-  Nodes that implement ECIP-1111 through ECIP-1114 will remain in consensus. Clients that do not support these ECIPs will fork from the canonical chain.
+  Nodes that implement ECIP-1111 through ECIP-1114 will remain in consensus. Clients that do not support ECIP-1111 will fork from the canonical chain at the designated activation block. Clients that support ECIP-1111 and ECIP-1112 but not ECIP-1113 or ECIP-1114 will remain in consensus but will be unable to process governance transactions or authorize treasury disbursements.
 
 - **Treasury Execution Requirements**:  
   To process disbursements, clients MUST support the deployed Olympia Treasury (ECIP-1112) and Olympia DAO (ECIP-1113) contracts. These contracts are required to validate ECFP-based execution flows.
@@ -469,7 +501,13 @@ While ECIP-1114 introduces no changes to Ethereum Classic's consensus or EVM beh
 
 #### 1. Metadata and Proposal Integrity
 
-This example proposal hash serves as the unique identifier for execution. It links the on-chain disbursement to an immutable, off-chain metadata record stored on IPFS or Arweave. This guards against tampering and ensures verifiability of funding intent and deliverables.
+The proposal hash serves as the unique identifier for execution. It links the on-chain disbursement to an immutable, off-chain metadata record stored on IPFS or Arweave, guarding against tampering and ensuring verifiability of funding intent and deliverables.
+
+All ECFPs MUST:
+- Embed a verifiable content hash (e.g., IPFS CID or Arweave digest) in the on-chain metadata to ensure tamper resistance.
+- Store proposal documents immutably in a content-addressable format.
+- Use a globally unique ECFP ID to prevent collisions or replay.
+- Include the chain ID and a domain separator in the hash to prevent replay attacks across testnets or forks.
 
 ```solidity
 // Off-chain: Generate ECFP proposal hash for on-chain binding
@@ -510,10 +548,10 @@ bytes32 proposalHash = keccak256(
   ECFP execution paths MUST follow deterministic disbursement logic as defined in ECIP-1112. Custom execution or fallback paths are prohibited.
 
 - **Immutable Lifecycle States**:  
-  Once an ECFP enters `Active` state (under vote), it becomes immutable. No edits or withdrawals are permitted.
+  Once an ECFP enters `Active` state (under vote), it becomes immutable. No edits or withdrawals are permitted, to preserve voting integrity.
 
 - **Redundant Event Logging**:  
-  Both DAO and Treasury contracts SHOULD emit standard events (e.g., `ProposalExecuted`) for independent indexing and traceability.
+  Both DAO and Treasury contracts SHOULD emit standard events (e.g., `ProposalSubmitted`, `ProposalExecuted`) for independent indexing and traceability.
 
 #### 3. Governance Process Risks
 
@@ -543,8 +581,8 @@ bytes32 proposalHash = keccak256(
 - **Proposal Manipulation**:  
   Deceptive or ambiguous proposals are mitigated via:
   - Required structured templates  
-  - Mandatory review periods  
-  - Metadata hash enforcement
+  - Mandatory review periods before activation  
+  - Metadata hash enforcement at execution time
 
 - **Funding Accountability**:  
   Proposals SHOULD adopt milestone-based disbursement, vesting schedules, and clawback clauses to prevent misuse of funds.
@@ -555,7 +593,7 @@ bytes32 proposalHash = keccak256(
   The DAO MAY implement participation safeguards, such as:
   - Minimum stake or token holdings  
   - Submission cooldown intervals  
-  - Contributor identity attestation or whitelisting
+  - Contributor identity attestation or whitelisting (permissionless, modular, and opt-in)
 
 - These gates MUST preserve permissionless access and be subject to governance review.
 
@@ -566,7 +604,8 @@ ECIP-1114 defines a secure, transparent, and upgradeable framework for treasury 
 - Immutable, verifiable proposal metadata  
 - Restricted and audited execution paths  
 - Formal quorum and upgrade thresholds  
-- Open yet protected proposal submission
+- Open yet protected proposal submission  
+- Full on-chain transparency of proposal lifecycle, voting records, and disbursements
 
 The full system MUST be tested on Mordor Testnet, reviewed through public audits, and verified for correctness prior to mainnet deployment.
 
@@ -594,4 +633,4 @@ Several EVM-compatible networks have successfully implemented DAO-based treasury
 | Optimism  | Retroactive Public Goods Funding (RPGF)   | Token House + Citizens House    | Retro funds for impact-based contributors                       |
 | Arbitrum  | AIP grant disbursement process            | Arbitrum DAO                    | $ARB holders vote on treasury grants                            |
 
-These precedents support the security and feasibility of the Ethereum Classic Funding Proposal (ECFP) system. ECIP-1114 builds on their lessons while tailoring the process to Ethereum Classic's values of decentralization, transparency, and immutability.
+These precedents support the security, sustainability, and feasibility of the Ethereum Classic Funding Proposal (ECFP) system. ECIP-1114 builds on their lessons while tailoring the process to Ethereum Classic's values of decentralization, transparency, immutability, and long-term sustainability.
